@@ -164,6 +164,8 @@ Release 0.5.0 - Unreleased
   OPTIMIZATIONS
 
   BUG FIXES
+  HCAT-599 NotificationListener doesn't use getTopic() for sending messages. (mithun via traviscrawford)
+
   HCAT-603 releaseaudit should run before generating artifacts (traviscrawford)
 
   HCAT-598 fix setting hcatalog version number via the command-line (traviscrawford)
